force-app/main/default/objects/Lead/fields/Applicant_Score__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Score__c</fullName>
    <description>Calculates the Applicant&apos;s Score based on various Parameters</description>
    <formula>IF(( Email_OTP_Verified__c ||  Mobile_OTP_Verified__c  ), 10, 5)   +  IF(ISBLANK(  Primary_Source__c ) , 0, 5) + IF(ISBLANK( Secondary_Source__c ) , 0, 5)   +  IF(ISBLANK(  Tertiary_Source__c ) , 0, 10) +  IF( HasOptedOutOfEmail , -1, 0) + IF(  DoNotCall , -1, 0) + IF(  hed__SMS_Opt_Out__c , -1, 0)+  Follow_Up_Task_Score__c + pi__score__c + 
IF(  ISPICKVAL( Disposition__c , &apos;No Response&apos;) , -1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Specifies the Applicant&apos;s Score</inlineHelpText>
    <label>Applicant Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>