force-app/main/default/objects/Lead/fields/Apply_for_REVA_CET__c.field-meta.xml
<CustomField>
    <fullName>Apply_for_REVA_CET__c</fullName>
    <description>Informs if the Applicant wants to apply for REVA CET</description>
    <inlineHelpText>Is the Applicant participating in REVA CET</inlineHelpText>
    <label>Apply for REVA CET?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>