force-app/main/default/objects/Lead/fields/Apply_for_REVA_PET__c.field-meta.xml
<CustomField>
    <fullName>Apply_for_REVA_PET__c</fullName>
    <description>Is the Applicant participating in REVA PET</description>
    <label>Apply for REVA PET?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>