force-app/main/default/objects/Lead/fields/Applying_For_REVA_CET__c.field-meta.xml
<CustomField>
    <fullName>Applying_For_REVA_CET__c</fullName>
    <description>This formula field is created to sync the values back to Pardot.</description>
    <formula>IF( ISPICKVAL(Apply_for_REVA_CET__c, &apos;Yes&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applying For REVA CET?</label>
    <type>Text</type>
</CustomField>