force-app/main/default/objects/Lead/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Displays information on the Applicant&apos;s category.</description>
    <inlineHelpText>Specifies the Applicant&apos;s category</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Karnataka</fullName>
            </value>
            <value>
                <fullName>Non-Karnataka</fullName>
            </value>
            <value>
                <fullName>Indian (SAARC)</fullName>
                <label>SAARC</label>
            </value>
            <value>
                <fullName>Non-Resident Indian(NRI)</fullName>
            </value>
            <value>
                <fullName>Foreign Nationals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>