force-app/main/default/objects/Lead/fields/Chat_Transcript_URL__c.field-meta.xml
<CustomField>
    <fullName>Chat_Transcript_URL__c</fullName>
    <label>Chat Transcript URL</label>
    <type>Url</type>
</CustomField>