force-app/main/default/objects/Lead/fields/Custom_Type__c.field-meta.xml
<CustomField>
    <fullName>Custom_Type__c</fullName>
    <label>Custom Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Admissions</fullName>
            </value>
            <value>
                <fullName>PR Coverage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>