force-app/main/default/objects/Lead/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <description>Specifies the disposition values selected by the Counselor</description>
    <inlineHelpText>Disposition value selected by the Counsellor</inlineHelpText>
    <label>Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Applicant_Disposition_Values</valueSetName>
    </valueSet>
</CustomField>