force-app/main/default/objects/Lead/fields/Email_OTP_Code__c.field-meta.xml
<CustomField>
    <fullName>Email_OTP_Code__c</fullName>
    <description>Verification code received by the Applicant on Email</description>
    <inlineHelpText>Verification code received on Email</inlineHelpText>
    <label>Email OTP Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>