force-app/main/default/objects/Lead/fields/Email_OTP_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Email_OTP_Expiration__c</fullName>
    <description>Expiration date/ time for Email Verification Code</description>
    <inlineHelpText>Specifies the validity for Email Verification code</inlineHelpText>
    <label>Email OTP Expiration</label>
    <type>DateTime</type>
</CustomField>