force-app/main/default/objects/Lead/fields/Email_OTP_Verified__c.field-meta.xml
<CustomField>
    <fullName>Email_OTP_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if Email is verified</description>
    <inlineHelpText>True, if Applicant&apos;s Email is Verified</inlineHelpText>
    <label>Email OTP Verified</label>
    <type>Checkbox</type>
</CustomField>