force-app/main/default/objects/Lead/fields/Exam_Date__c.field-meta.xml
<CustomField>
    <fullName>Exam_Date__c</fullName>
    <description>This formula field is created to sync the values back to Pardot.</description>
    <formula>Exam_Dates__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>REVA CET Date</label>
    <type>Date</type>
</CustomField>