force-app/main/default/objects/Lead/fields/Exam_Dates__c.field-meta.xml
<CustomField>
    <fullName>Exam_Dates__c</fullName>
    <description>Specifies the Exam Dates for Applicant&apos;s REVA CET</description>
    <inlineHelpText>REVA CET Date Selected by Applicant</inlineHelpText>
    <label>Exam Dates</label>
    <type>Date</type>
</CustomField>