force-app/main/default/objects/Lead/fields/Exam_Type__c.field-meta.xml
<CustomField>
    <fullName>Exam_Type__c</fullName>
    <description>REVA CET Exam Type selected by Applicant</description>
    <inlineHelpText>Applicant&apos;s Choice of Exam mode for REVA CET</inlineHelpText>
    <label>Exam Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offline-CET</fullName>
            </value>
            <value>
                <fullName>Offline - Ph.D</fullName>
            </value>
            <value>
                <fullName>Laptop/Desktop with webcam</fullName>
            </value>
            <value>
                <fullName>Centre Based</fullName>
                <isActive>false</isActive>
                <label>Centre Based</label>
            </value>
            <value>
                <fullName>Home Based</fullName>
                <isActive>false</isActive>
                <label>Home Based</label>
            </value>
            <value>
                <fullName>Internet</fullName>
                <isActive>false</isActive>
                <label>Internet</label>
            </value>
            <value>
                <fullName>Internet/Home Based</fullName>
                <isActive>false</isActive>
                <label>Internet/Home Based</label>
            </value>
            <value>
                <fullName>Mobile Based</fullName>
                <isActive>false</isActive>
                <label>Mobile Based</label>
            </value>
            <value>
                <fullName>Offline</fullName>
                <isActive>false</isActive>
                <label>Offline</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>