force-app/main/default/objects/Lead/fields/hed__Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>hed__Ethnicity__c</fullName>
    <description>The Lead&apos;s self-identified ethnicity.</description>
    <label>Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hispanic or Latino</fullName>
            </value>
            <value>
                <fullName>Not Hispanic or Latino</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>