force-app/main/default/objects/Lead/fields/hed__Preferred_Teaching_Format__c.field-meta.xml
<CustomField>
    <fullName>hed__Preferred_Teaching_Format__c</fullName>
    <description>The Lead&apos;s preferred teaching format.</description>
    <label>Preferred Teaching Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>In-Person</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>