force-app/main/default/objects/Lead/fields/Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity__c</fullName>
    <description>Last activity on this Lead</description>
    <formula>LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Last activity on this Lead</inlineHelpText>
    <label>Last Activity Date</label>
    <type>Date</type>
</CustomField>