force-app/main/default/objects/Lead/fields/Mobile_OTP_Code__c.field-meta.xml
<CustomField>
    <fullName>Mobile_OTP_Code__c</fullName>
    <description>Verification code received by the Applicant on Mobile</description>
    <inlineHelpText>Verification code received on Mobile</inlineHelpText>
    <label>Mobile OTP Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>