force-app/main/default/objects/Lead/fields/Mobile_OTP_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Mobile_OTP_Expiration__c</fullName>
    <description>Expiration date/ time for Mobile Verification Code</description>
    <inlineHelpText>Specifies the validity for Mobile Verification code</inlineHelpText>
    <label>Mobile OTP Expiration</label>
    <type>DateTime</type>
</CustomField>