force-app/main/default/objects/Lead/fields/Mobile_OTP_Verified__c.field-meta.xml
<CustomField>
    <fullName>Mobile_OTP_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if Mobile Number is verified</description>
    <inlineHelpText>True, if Applicant&apos;s Mobile is Verified</inlineHelpText>
    <label>Mobile OTP Verified</label>
    <type>Checkbox</type>
</CustomField>