force-app/main/default/objects/Lead/fields/Month_Formula__c.field-meta.xml
<CustomField>
    <fullName>Month_Formula__c</fullName>
    <formula>CASE(VALUE(TEXT(MONTH(DATEVALUE(CreatedDate)))),
    1, &apos;January&apos;,
    2, &apos;February&apos;,
    3, &apos;March&apos;,
    4, &apos;April&apos;,
    5, &apos;May&apos;,
    6, &apos;June&apos;,
    7, &apos;July&apos;,
    8, &apos;August&apos;,
    9, &apos;September&apos;,
    10, &apos;October&apos;,
    11, &apos;November&apos;,
    12, &apos;December&apos;,
    &apos;None&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Formula</label>
    <type>Text</type>
</CustomField>