force-app/main/default/objects/Lead/fields/Number_of_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Weeks__c</fullName>
    <formula>CEILING((( DATEVALUE(CreatedDate) - DATE(YEAR(DATEVALUE(CreatedDate)), 1, 1) + 1) +
MOD(DATE(YEAR(DATEVALUE(CreatedDate)), 1, 1) - DATE(1900, 1, 7), 7)) / 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Weeks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>