force-app/main/default/objects/Lead/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <formula>BLANKVALUE(Owner:User.FirstName, &apos;&apos;) &amp; &apos; &apos; &amp; BLANKVALUE(Owner:User.LastName, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>