force-app/main/default/objects/Lead/fields/PET_Exam_Date__c.field-meta.xml
<CustomField>
    <fullName>PET_Exam_Date__c</fullName>
    <description>REVA PET Date Selected by Applicant</description>
    <label>PET Exam Date</label>
    <type>Date</type>
</CustomField>