force-app/main/default/objects/Lead/fields/PET_Exam_Type__c.field-meta.xml
<CustomField>
    <fullName>PET_Exam_Type__c</fullName>
    <description>Applicant&apos;s Choice of Exam mode for REVA PET</description>
    <label>PET Exam Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offline-CET</fullName>
            </value>
            <value>
                <fullName>Offline - Ph.D</fullName>
            </value>
            <value>
                <fullName>Laptop/Desktop with webcam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>