force-app/main/default/objects/Lead/fields/Primary_Source__c.field-meta.xml
<CustomField>
    <fullName>Primary_Source__c</fullName>
    <description>Specifies the source  through which the Applicant landed for the first time</description>
    <inlineHelpText>First time Source of the Applicant</inlineHelpText>
    <label>Primary Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>