force-app/main/default/objects/Lead/fields/Program_Batch__c.field-meta.xml
<CustomField>
    <fullName>Program_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Program Batch Name to which the applicant is applying for</description>
    <inlineHelpText>Name of the Program batch to which the applicant is applying for</inlineHelpText>
    <label>Program Batch</label>
    <referenceTo>hed__Program_Plan__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>