force-app/main/default/objects/Lead/fields/Program_Name_Display__c.field-meta.xml
<CustomField>
    <fullName>Program_Name_Display__c</fullName>
    <description>This is a display program name for better readability</description>
    <inlineHelpText>Display program name for ease of readability</inlineHelpText>
    <label>Program Name Display</label>
    <type>TextArea</type>
</CustomField>