force-app/main/default/objects/Lead/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <description>School Name Selected on the Registration Form</description>
    <inlineHelpText>School Name selected by Applicant on Registration Form</inlineHelpText>
    <label>School</label>
    <type>TextArea</type>
</CustomField>