force-app/main/default/objects/Lead/fields/Secondary_Source__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Source__c</fullName>
    <description>Specifies the source through which the Applicant landed for the second time</description>
    <inlineHelpText>Second-time Source of the Applicant</inlineHelpText>
    <label>Secondary Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>