force-app/main/default/objects/Lead/fields/Select_Category__c.field-meta.xml
<CustomField>
    <fullName>Select_Category__c</fullName>
    <description>This formula field is created to sync the values back to Pardot.</description>
    <formula>TEXT( Category__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Select Category</label>
    <type>Text</type>
</CustomField>